-*- text -*-

Changes in 2.34:

* cr16c support removed.

* Add support for z80-elf.

* Add support for relocation of each byte or word of multibyte value to Z80
  targets.

* Add support for Zilog eZ80 (both ADL and Z80 mode) and Zilog Z180 CPUs.

Changes in 2.33:

* Add command-line option --no-print-map-discarded.

* The Cortex-A53 Erratum 843419 workaround now supports a choice of which
  workaround to use.  The option --fix-cortex-a53-843419 now takes an
  optional argument --fix-cortex-a53-843419[=full|adr|adrp] which can be
  used to force a particular workaround to be used.  See --help for AArch64
  for more details.

* Add target handlers for AArch64 for ELF GNU program properties.

* Add support for GNU_PROPERTY_AARCH64_FEATURE_1_BTI in ELF GNU program
  properties in the AArch64 ELF linker.

* Add support for GNU_PROPERTY_AARCH64_FEATURE_1_PAC in ELF GNU program
  properties in the AArch64 ELF linker.

* Add -z force-bti for AArch64 to enable GNU_PROPERTY_AARCH64_FEATURE_1_BTI
  on output while warning about missing GNU_PROPERTY_AARCH64_FEATURE_1_BTI
  on inputs and use PLTs protected with BTI.

* Add -z pac-plt for AArch64 to pick PAC enabled PLTs.

Changes in 2.32:

* Report property change in linker map file when merging GNU properties.

* Add support for the C-SKY processor series.

* -t now doesn't report members within archives, unless -t is given twice.
  A single -t is now more useful when generating a list of files that should be
  packaged for a linker bug report.  For example:
    gcc hello.c -save-temps -Wl,-t | xargs realpath | sort | uniq > files
    tar cJf test.tar.xz `cat files`

Changes in 2.31:

* Speed up direct linking with DLLs for Cygwin and Mingw targets.

* Add a configure option --enable-separate-code to decide whether
  -z separate-code should be enabled in ELF linker by default.  Default
  to yes for Linux/x86 targets.  Note that -z separate-code can increase
  disk and memory size.

Changes in 2.30:
